Bug 213162 - Webkitkde doesn't honor mime types for links
Summary: Webkitkde doesn't honor mime types for links
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdewebkit (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-04 23:25 UTC by Cédric Bellegarde
Modified: 2010-11-18 14:53 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cédric Bellegarde 2009-11-04 23:25:55 UTC
Version:            (using Devel)
OS:                Linux
Installed from:    Compiled sources

http://blogs.fsfe.org/gladhorn/2009/11/04/hotter-new-stuff-on-its-way/

Look at this page.

When i right click ogg video link:
- khtml give me: "Open with smplayer, vlc, ..."
- webkitkde give me: "Open with firefox, arora, ..."
Comment 1 Dawit Alemayehu 2009-12-09 04:06:27 UTC
SVN commit 1060477 by adawit:

- Attempt to detect the mime-type of a link on RMB click.
- Removed the history navigation related code that has been improved and
  moved to KWebPage::acceptNavigationRequest.

BUG:213162


 M  +24 -9     webview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1060477
Comment 2 Dario Andres 2010-11-18 14:53:30 UTC
[Comment from a bug triager]
Moving old kdewebkit bug reports to kdelibs/kdewebkit. Sorry about the noise