- Attempt to detect the mime-type of a link on RMB click. - Removed the history navigation related code that has been improved and   moved to KWebPage::acceptNavigationRequest.

BUG:213162